--- a/additional_information.html
+++ b/additional_information.html
@@ -395,7 +395,7 @@
                                                                     </div>
                                                                 </div>
                                                            	</div>
-                                                            <div class="col-xs-12 appendreg"></div>
+                                                            <div class="col-xs-12 appendreg" role="alert"></div>
                                                             <div class="col-xs-12" aria-label="add additional registration number">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -608,7 +608,7 @@
                                                                   </div>
                                                                 </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_courtd"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_courtd" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -747,7 +747,7 @@
                                                               </div>
                                                             </div> 
                                                         </div>
-                                                        <div class="col-xs-12 appendaconcregapp_ttab"></div>
+                                                        <div class="col-xs-12 appendaconcregapp_ttab" role="alert"></div>
                                                         <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                             <div class="row">
                                                                 <div class="inlinebuttons btn-group btn-group-justified">
@@ -882,7 +882,7 @@
                                                                 </div>
                                                               </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_conflictingreg"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_conflictingreg" role="alert"></div>
                                                                 <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                     <div class="row">
                                                                         <div class="inlinebuttons btn-group btn-group-justified">
@@ -1017,7 +1017,7 @@
                                                                   </div>
                                                                 </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_earlieruse"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_earlieruse" role="alert"></div>
                                                                 <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                     <div class="row">
                                                                         <div class="inlinebuttons btn-group btn-group-justified">
