--- a/additional_information_ROA_optional.html
+++ b/additional_information_ROA_optional.html
@@ -385,7 +385,7 @@
                                                                     </div>
                                                                 </div>
                                                            	</div>
-                                                            <div class="col-xs-12 appendreg"></div>
+                                                            <div class="col-xs-12 appendreg" role="alert"></div>
                                                             <div class="col-xs-12" aria-label="add additional registration number">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -598,7 +598,7 @@
                                                                   </div>
                                                                 </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_courtd"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_courtd" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -737,7 +737,7 @@
                                                               </div>
                                                             </div> 
                                                         </div>
-                                                        <div class="col-xs-12 appendaconcregapp_ttab"></div>
+                                                        <div class="col-xs-12 appendaconcregapp_ttab" role="alert"></div>
                                                         <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                             <div class="row">
                                                                 <div class="inlinebuttons btn-group btn-group-justified">
@@ -872,7 +872,7 @@
                                                                 </div>
                                                               </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_conflictingreg"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_conflictingreg" role="alert"></div>
                                                                 <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                     <div class="row">
                                                                         <div class="inlinebuttons btn-group btn-group-justified">
@@ -1007,7 +1007,7 @@
                                                                   </div>
                                                                 </div> 
                                                             </div>
-                                                            <div class="col-xs-12 appendaconcregapp_earlieruse"></div>
+                                                            <div class="col-xs-12 appendaconcregapp_earlieruse" role="alert"></div>
                                                                 <div class="col-xs-12 form-group form-group-md" aria-label="Add additional application/registration">
                                                                     <div class="row">
                                                                         <div class="inlinebuttons btn-group btn-group-justified">
