--- a/amend_mark_ROA_optional.html
+++ b/amend_mark_ROA_optional.html
@@ -351,7 +351,7 @@
                                                                     <input type="text" class="form-control" id="inthemark">
                                                                 </div>
                                                             </div>
-                                                            <div class="appendatranslate"></div>
+                                                            <div class="appendatranslate" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional translation">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -415,7 +415,7 @@
                                                                     <p class="form-group form-group-md">in English.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="appendatransliterate"></div>
+                                                            <div class="appendatransliterate" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional transliteration">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -456,7 +456,7 @@
                                                     <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                     <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
                                                     <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
-                                                    <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                    <div id="yescontainsname" role="alert" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                         <div class="containsaname col-xs-12">
                                                             <div class="row addname">
                                                                 <div class="form-group form-group-md col-xs-12 visuallyremoved resetname">
@@ -475,7 +475,7 @@
                                                                     <input type="text" class="form-control" id="lastname">
                                                                 </div>
                                                             </div>
-                                                            <div class="appendaname"></div>
+                                                            <div class="appendaname" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional name">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -489,7 +489,7 @@
                                                     </div>
                                                     <input class="form-check-input checkmark" type="checkbox" value="portrait" tabindex="0" id="portraitchecked" aria-labelledby="checkportrait">
                                                     <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial">Portrait</span></label>
-                                                    <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                    <div id="yescontainsportrait" role="alert" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                         <div class="containsaportrait col-xs-12">
                                                             <div class="row addportrait">
                                                                 <div class="form-group form-group-md col-xs-12 visuallyremoved resetportrait">
@@ -508,7 +508,7 @@
                                                                     <input type="text" class="form-control" id="lastname">
                                                                 </div>
                                                             </div>
-                                                            <div class="appendaportrait"></div>
+                                                            <div class="appendaportrait" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional portrait">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -522,7 +522,7 @@
                                                     </div>
                                                     <input class="form-check-input checkmark" type="checkbox" value="signature" tabindex="0" aria-labelledby="checksignature" id="signaturechecked">
                                                     <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial">Signature</span></label>
-                                                    <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
+                                                    <div id="yescontainssignature" role="alert" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                         <div class="containsasignature col-xs-12">
                                                             <div class="row addsignature">
                                                                 <div class="form-group form-group-md col-xs-12 visuallyremoved resetsignature">
@@ -541,7 +541,7 @@
                                                                     <input type="text" class="form-control" id="lastname">
                                                                 </div>
                                                             </div>
-                                                            <div class="appendasignature"></div>
+                                                            <div class="appendasignature" role="alert"></div>
                                                             <div class="col-xs-12 form-group form-group-md" aria-label="Add additional signature">
                                                                 <div class="row">
                                                                     <div class="inlinebuttons btn-group btn-group-justified">
@@ -553,7 +553,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <p id="individualiving">Does this refer to a particular living individual? See the <a href="https://www.uspto.gov/trademark/laws-regulations/inquiry-regarding-nameportraitsignature-particular-living-individual-mark" target="_blank">Name/Portrait/Consent help page<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span><span class="sr-only">Opens in new window</span></a></p>                                                        <div role="radiogroup" class="form-group form-group-md" aria-labelledby="individualiving">
+                                                    <p id="individualiving">Does this refer to a particular living individual? See the <a href="https://www.uspto.gov/trademark/laws-regulations/inquiry-regarding-nameportraitsignature-particular-living-individual-mark" target="_blank">Name/Portrait/Consent help page<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span><span class="sr-only">Opens in new window</span></a></p>                                                        
+                                                    <div role="radiogroup" class="form-group form-group-md" aria-labelledby="individualiving">
                                                         <label for="inlineRadio17" class="radio-inline radiocontainer">Yes<input type="radio" name="livindividualradio" id="inlineRadio17" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                         <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                     </div><!--END radiogroup-->
@@ -620,7 +621,7 @@
                                                         <button type="button" class="btn btn-sm close resetdisclaimbtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                     </div>
                                                 </div> 
-                                                <div class="appenddisclaim"></div>
+                                                <div class="appenddisclaim" role="alert"></div>
                                                 <div class="form-group form-group-md col-xs-12">
                                                     <div class="row">
                                                         <div class="inlinebuttons btn-group btn-group-justified">
@@ -661,7 +662,7 @@
                                                         <button type="button" class="btn btn-sm close resetdktrefbtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                     </div>
                                                 </div>
-                                                <div class="appenddocket"></div>
+                                                <div class="appenddocket" role="alert"></div>
                                                 <div class="form-group form-group-md col-xs-12" aria-label="add additional docket or reference number">
                                                     <div class="row">
                                                         <div class="inlinebuttons btn-group btn-group-justified">
