--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -376,7 +376,7 @@
                                                                 	</div>
                                                                 </div><!--pending foreign-->
                                                                 <div class="row">
-                                                                    <div class="appendapending col-xs-12"></div>
+                                                                    <div class="col-xs-12 appendapending" role="alert"></div>
                                                                     <div class="form-group form-group-md col-xs-12" aria-label="add additional foreign application">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -444,7 +444,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="row">
-                                                                    <div class="appendaforeign col-xs-12"></div>
+                                                                    <div class="col-xs-12 appendaforeign" role="alert"></div>
                                                                     <div class="form-group form-group-md col-xs-12" aria-label="Add additional foreign registration">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -553,7 +553,7 @@
                                                                 	</div>
                                                                 </div><!--pending foreign-->
                                                                 <div class="row">
-                                                                    <div class="appendapending col-xs-12"></div>
+                                                                    <div class="col-xs-12 appendapending" role="alert"></div>
                                                                     <div class="form-group form-group-md col-xs-12" aria-label="add additional foreign application">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -621,7 +621,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="row">
-                                                                    <div class="appendaforeign col-xs-12"></div>
+                                                                    <div class="col-xs-12 appendaforeign" role="alert"></div>
                                                                     <div class="form-group form-group-md col-xs-12" aria-label="Add additional foreign registration">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
