--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -253,7 +253,7 @@
                                                                 <button type="button" class="btn btn-sm close resetdisclaimbtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                             </div>
                                                     	</div> 
-                                                        <div class="appenddisclaim"></div>
+                                                        <div class="appenddisclaim" role="alert"></div>
                                                         <div class="form-group form-group-md col-xs-12">
                                                             <div class="row">
                                                                 <div class="inlinebuttons btn-group btn-group-justified">
@@ -295,7 +295,7 @@
                                                                 <button type="button" class="btn btn-sm close resetdktrefbtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                             </div>
                                                         </div>
-                                                        <div class="appenddocket"></div>
+                                                        <div class="appenddocket" role="alert"></div>
                                                         <div class="form-group form-group-md col-xs-12" aria-label="add additional docket or reference number">
                                                             <div class="row">
                                                                 <div class="inlinebuttons btn-group btn-group-justified">
