--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -334,7 +334,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendaname"></div>
+                                                                    <div class="appendaname" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional name">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -367,7 +367,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendaportrait"></div>
+                                                                    <div class="appendaportrait" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional portrait">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -400,7 +400,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendasignature"></div>
+                                                                    <div class="appendasignature" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional signature">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
