--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -634,7 +634,7 @@
                                             </div>
                                     	</div>
                                     </div> 
-                                    <div class="appendphones"></div>
+                                    <div class="appendphones" role="alert"></div>
                                     <div class="form-group form-group-md col-xs-12" aria-label="add additional phone number">
                                         <div class="row">
                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -660,7 +660,7 @@
                                             <button type="button" class="btn btn-sm close resetdktrefbtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                         </div>
                                     </div>
-                                    <div class="appenddocket"></div>
+                                    <div class="appenddocket" role="alert"></div>
                                     <div class="form-group form-group-md col-xs-12">
                                         <div class="row">
                                             <div class="inlinebuttons btn-group btn-group-justified">
