--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -287,7 +287,7 @@
                                                                         <input type="text" class="form-control" id="inthemark">
                                                                     </div>
                                                                 </div>
-                                                                <div class="appendatranslate"></div>
+                                                                <div class="appendatranslate" role="alert"></div>
                                                                 <div class="col-xs-12 form-group form-group-md" aria-label="Add additional translation">
                                                                     <div class="row">
                                                                         <div class="inlinebuttons btn-group btn-group-justified">
@@ -345,7 +345,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendaname"></div>
+                                                                    <div class="appendaname" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional name">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -378,7 +378,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendaportrait"></div>
+                                                                    <div class="appendaportrait" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional portrait">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
@@ -411,7 +411,7 @@
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="appendasignature"></div>
+                                                                    <div class="appendasignature" role="alert"></div>
                                                                     <div class="col-xs-12 form-group form-group-md" aria-label="Add additional signature">
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
