--- a/user_profile.html
+++ b/user_profile.html
@@ -483,7 +483,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="appendphones"></div>
+                                <div class="appendphones" role="alert"></div>
                                 <div class="form-group form-group-md col-xs-12" aria-label="add additional phone number">
                                     <div class="row">
                                         <div class="inlinebuttons btn-group btn-group-justified">
