--- a/file_petition_table.html
+++ b/file_petition_table.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: File a Petition</title>
+    <title>File a Petition :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -146,16 +146,18 @@
                                 <table id="filepetitiontable" class="table Datatable row-border display responsive" style="width:100%" role="grid" aria-describedby="petition">
                                 	<thead>
                                         <tr role="row">
+                                        	<th scope="col" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"></th><!--control-->
                                             <th scope="col" class="desktop tablet fablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"> Mark</th>
                                             <th scope="col" class="sorting_asc desktop tablet fablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Serial#</th>
                                             <th scope="col" class="sorting_asc desktop tablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Filing Date</th>
                                             <th scope="col" class="sorting desktop tablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Status</th>
-                                            <th scope="col" class="sorting desktop tablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Owner</th>
+                                            <th scope="col" class="sorting desktop tablet fablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Owner</th>
                                             <th scope="col" class="sorting desktop tablet" tabindex="0" aria-controls="filepetitiontable" rowspan="1" colspan="1" role="columnheader"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Attorney</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                       <tr>
+                                      	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                         <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                         <td tabindex="0"><a href="#">85927738</a></td>
                                         <td tabindex="0">&nbsp;</td>
@@ -164,6 +166,7 @@
                                         <td tabindex="0">Bob Ross</td>
                                       </tr>
                                       <tr>
+                                      	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                         <td><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                         <td tabindex="0"><a href="#">87697840</a></td>
                                         <td tabindex="0">July 31, 2018</td>
